top banner added

--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sunny Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Mehran Sunny</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+
+            <p>I love spiderman he is my fevourite superhero.But i like tobey version of spiderman.Tobey version was
+                best of
+                all.I still love him so much although he is old.but as long as it comes superhero movie whatever it is
+                DC or
+                Marvel i love it the most</p>
+            <a class="link-button" target="_blank"
+                href="https://www.bing.com/search?q=spider+man+no+way+home&cvid=eb88fc1d045d4d0484770d5eced1f3b3&aqs=edge.1.69i57j0l8.5834j0j1&pglt=43&FORM=ANNTA1&PC=WSEDDB">HIRE
+                ME
+            </a>
+        </div>
+        <div class="half-width"><img src="showOff/glass.JPG" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
