--- a/index.html
+++ b/index.html
@@ -32,6 +32,18 @@
         <div class="half-width"><img src="showOff/glass.JPG" alt="">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="showOff/smart boy.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>A web developer is a programmer who develops World Wide Web applications using a client–server model.
+            </p>
+            <a class="link-button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
