--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width">
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Mehran Sunny</span> World</h1>
@@ -32,7 +32,7 @@
         <div class="half-width"><img src="showOff/glass.JPG" alt="">
         </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
             <img src="showOff/smart boy.jpg" alt="">
         </div>
@@ -44,6 +44,31 @@
             <a class="link-button" target="_blank" href="">Download Resume</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h1>Experiences</h1>
+        <div class="flexible-container">
+            <div id="full-stack-developer" class="experience-item">
+                <h1>Full Stack developer</h1>
+                <h3 class="orange-color">2022-Present | Fresher Level</h3>
+                <p>Career Objective: Seeking a position to utilize my skills and abilities in the information technology
+                    industry that offers professional growth while being resourceful,</p>
+            </div>
+            <div id="baby-web-developer" class="experience-item">
+                <h1>Baby Web Developer</h1>
+                <h3 class="orange-color">2022-2024 | Pro Level Developer</h3>
+                <p>Wish to begin my career as a good Software Engineer by working on challenging projects. Further want
+                    to
+                    deal with each and every aspect and work related to Computer Engineering. At the end of the day I
+                    want
+                    to be a satisfied Software Engineer.
+                </p>
+            </div>
+
+        </div>
+    </section>
 </body>
+<footer>
+    <p>*Everything will be all right</p>
+</footer>
 
 </html>
